css/main.css
/* ... */
#filters {
  margin: 0 0 25px 0;
}

.list-separator li>a i {
  width: 56px;
  height: 56px;
  text-align: center;
  line-height: 56px;
  font-size: 20px;
}

.error {
  color: #EF7272!important;
  font-size: 12px!important;
}

#portfolio-filter {
  margin-top: 50px;
}

.navbar-toggle i {
  color: #BCCCBF;
}

.menu .list-group-item-heading,
.menu .list-group-item-text {
  color: #fff!important;
}

.aboutUsHome {
  text-align: center;
}

.aboutUsHome p {
  text-align: center;
}

.aboutUsHome h1 {
  text-align: center;
}

footer {
  border-top: 1px solid #313546;
  width: auto;
  height: 10px;
  margin-top: 10px;
  margin-bottom: 3em;
  padding-top: 10px;
  font-size: 13px;
  bottom: 0;
  padding-bottom: 10px;
  text-align: center;
  color: #152935;
  margin: 2rem 4rem;
}

i.fa.fa-heart {
  color: rgb(249, 135, 39);
}

.content.well {
  float: left;
}

.items-wrapper {
  display: flex;
  flex-wrap: wrap;
  margin-top: 0;
  padding-left: 0;
  margin-bottom: 0;
}

.project-item {
  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  margin-bottom: 3rem;
}

.TotHome {
  text-align: left;
  width: 100%;
  padding: 2rem 0rem 0rem 0rem;
  color: #5A6872;
  font-size: 14px;
  justify-content: space-between;
  display: flex;
}

.leftHeaderLabel {
  display: flex;
}

.allButton {
  color: #f98823;
  font-size: 16px;
  margin: 0px 25px 25px;
  display: flex;
  align-items: center;
  line-height: 48px;
}

.allButton:hover {
  text-decoration: none;
  color: #f98823;
  margin: 0px 30px 25px;
}

.allButton img {
  transform: rotate(180deg);
  margin: 0px 0 0 20px;
}


/* Back button */

.post__header .post-card__container--back {
  justify-content: left;
}

.post-card__meta {
  height: 32px;
  font-size: 16px;
  color: rgba(255, 255, 255, 0.6)!important;
  position: relative;
  padding: 0 0 0 36px;
  margin: 0 30px 0 0;
  display: flex;
  align-items: center;
}

.post-card__meta-link {
  color: #f98823!important;
}

.post-card__meta-link img {
  position: relative;
  width: 20px;
  left: 0;
  vertical-align: middle;
  transition: left 0.2s ease;
  margin-right: 20px;
}

.post-card__container.post-card__container--back {
  margin-bottom: 20px;
}

.post-card__meta-link:hover {
  text-decoration: none;
}

.headerPanelL {
  color: #3d70b2;
  display: flex;
  align-items: center;
  font-size: 24px;
  margin: 0 0 25px;
}

.mainDisplayDisplay {
  text-align: center;
  margin-top: 35px;
}

.mainHeaderPanelL {
  text-align: center;
  color: #fff;
  display: block;
  align-items: center;
  font-size: 24px;
  margin-top: 0px;
}

.mainDisplayDisplay p {
  text-align: center;
  color: #fff;
  align-items: center;
  font-size: 12px;
  margin: 25px 0px 30px 0px;
  color: #fff;
}

.headerPanelR {
  display: flex;
}

img#IBM-icon-solutions {
  width: 35px;
  margin: 0 15px 0 0;
}

#code-icon-solutions-inside {
  margin-top: 25px;
}

img#IBM-icon-solutions-inside {
  margin-left: -22px;
}

a#demoID {
  font-size: 18px;
  line-height: 30px;
  letter-spacing: -0.4px;
  color: #3a4250;
  margin: 5px 0 5px;
  transition: opacity 0.2s ease;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

a#demoID:hover {
  text-decoration: none;
}

.project-content.description span {
  margin: 0;
  color: rgba(58, 66, 80, 0.5);
  display: inline-block;
  font-size: 14px;
}

.search-body {
  width: 100%;
  margin-top: 1rem;
}

.search-body button {
  margin-bottom: 1rem;
}

.language.search-body button.tagFilter.btn.btn-sm {
  padding: 1px 10px;
  font-size: 11px;
  margin-right: 5px;
  border-bottom: none;
  border-radius: 10px;
  font-weight: normal;
  background: #eed3fe;
  color: #7c4f9e;
}

.language.search-body button.tagFilter.btn.btn-sm.active {
  background: #7c4f9e;
  color: #eed3fe;
  padding-right: 15px;
}

.language.search-body button.tagFilter.btn.btn-sm.active:after {
  position: absolute;
  top: 3px;
  bottom: 0;
  content: "\274c";
  font-size: 16px;
  color: #eed3fe;
  line-height: 100px;
  text-align: center;
  padding-left: 2px;
  content: '\d7';
}

.project-content {
  font-size: 14px;
  color: rgba(0, 0, 0, 0.75);
  margin-bottom: 10px;
  display: inline-block;
}

.project-content.description {
  display: inline-block;
  /* height: 100px; */
  overflow: hidden;
}

.tag-filter.language {
  background: #eed3fe;
  color: #7c4f9e;
  float: left;
  margin-bottom: 5px;
  margin-right: 2px;
  border-radius: 10px;
  padding: 2px 6px;
  font-size: 12px;
}

a#LiveDemo {
  color: white;
  font-size: 14px;
  font-weight: bold;
}

.project-outer {
  flex: 1;
  background: #fff;
  padding: 30px 30px 0;
  border-radius: 5px 5px 0 0;
}

.mostClicked {
  background: #8c9ba5;
  position: absolute;
  position: relative;
  float: right;
  margin-right: -15px;
  margin-top: -15px;
  color: #f5f7fa;
  padding: 2px 10px;
}

.tag-services {
  display: inline-block;
  height: 40px;
  overflow: hidden;
}

a.btn.btn-info.btn-raised.btn-sm.project-link {
  background-color: #0f212e;
  color: rgba(255, 255, 255, .84);
  border: none;
  border-radius: 1px;
}

.content.well {
  padding: 10px;
}

.tag-level {
  background-color: #EBF0F7;
  padding: 10px;
  border-top: 1px solid #DFE6EB;
}

.gitHubIcon {
  float: right;
}

.tag-technologies span {
  color: #94a3ab;
}

.tag-level span, .tag-level a {
  color: rgba(255, 255, 255, 0.7);
  font-size: 11px;
}

span.project-link.demo {
  float: left;
  margin-left: 0.5rem;
}

a.hrefLink {
  font-size: 14px;
}

.tag-holder {
  margin-bottom: 1.5rem;
}

.tag-holder span,
.tag-holder a {
  color: #162935;
}

ul.list-separator.nav.navbar-nav.well.well-primary.default {
  width: 100%;
}

.tags {
  list-style: none;
  margin: 0;
  overflow: hidden;
  padding: 0;
}

.header-panel.shadow-z-2-banner {
  background: #5596e6;
  padding: 10px 0;
  position: relative;
  overflow: hidden;
}
/* ... */

